--- a/src/components/navBar/Navbar.css
+++ b/src/components/navBar/Navbar.css
@@ -1,13 +1,23 @@
 .logo {
-  width: 250px;
+  width: 140px;
   height: 60px;
 }
 
 ul li {
   text-align: center;
+  padding: 0 10px 0 0;
 }
 
-.costmusetoggler {
-  width: 50px;
-  height: 50px;
+ul li a {
+  color: #fff !important;
+  font-size: 13px;
+}
+
+.navbar .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #f0b90b !important;
+}
+
+.navbar {
+  background-color: #12161c;
 }
