--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,35 @@
   justify-content: center;
   margin-top: 30px;
 }
+
+
+/* .flex {
+    display : flex;
+    justify-content: space-around;
+} */
+
+.input-search {
+    display: flex;
+    margin: 20px;
+}
+
+.search-bar {
+    display: flex;
+    /* justify-content: center; */
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 10px 10px; */
+}
+
+.search-bar > * {
+    margin: 10px 10px;
+}
+
+.three-card {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+
+
