--- a/src/components/Card/Cards.css
+++ b/src/components/Card/Cards.css
@@ -21,7 +21,7 @@ p.property-type {
 }
 
 .pagination-navbar {
-  background:tomato;
+  background:rgb(2, 2, 2);
   width: 60%;
   justify-content: center;
   margin: 0px auto;
