--- a/src/components/review/Review.css
+++ b/src/components/review/Review.css
@@ -36,7 +36,9 @@ h2 {
 .car {
   width: 365px;
   margin-inline: -3px;
-  border: 1px dotted black;
+  border: 0px solid black;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
 }
 .post {
   transition: all 0.2s ease-in-out;
