--- a/src/components/postPage/Postpage.css
+++ b/src/components/postPage/Postpage.css
@@ -1,9 +1,8 @@
 .form {
   height: 700px;
   box-shadow: 0px 0px 4px 3px black;
-  
-  color: black;
-  margin-inline: 170px;
+   color: black;
+  width: 300px;
   background-color: white;
   margin-top: -354px;
 }
@@ -23,10 +22,11 @@ h1 {
   display: flex;
   justify-content: space-between;
   height: 739px;
+  margin-inline: 100px;
 }
 
 .tabl {
-  width: 66%;
+  width: 1050px;
   margin-top: -200px;
 }
 
@@ -34,8 +34,8 @@ h1 {
   margin-top: -80px;
   border: 1px solid black;
   background-color: white;
-  width: 1056px;
-  margin-inline: 100px;
+  width: 1006px;
+  margin-inline: -10px;
 }
 
 @media all and (min-width: 570px) and (max-width: 1350px) {
@@ -69,28 +69,32 @@ h1 {
 @media all and (max-width: 500px) {
   .all {
     flex-direction: column-reverse;
-    margin-top: -90px;
+    margin-top: 160px;
   }
   .form {
-    margin-top: -380px;
-    margin-inline: 10px;
-    width: 330px;
+    margin-top: 90px;
+    margin-inline: -28px;
+    width: 290px;
+    height: 909px;
   }
   .tabl {
     display: none;
   }
   .cardd {
-    max-width: 320px;
-    margin-inline: 30px;
+    max-width: 220px;
+    margin-top: 40px;
+    margin-inline: 78px;
   }
+
+
   .r {
-    max-width: 320px;
+    max-width: 360px;
   }
   .b {
     display: flex;
     justify-content: space-around;
   }
   h1 {
-    font-size: 20px;
+    display: none;
   }
 }
